--- a/src/IdentityModel.csproj
+++ b/src/IdentityModel.csproj
@@ -27,6 +27,7 @@
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <AssemblyName>II.IdentityModel</AssemblyName>
   </PropertyGroup>
 
   <!--Conditional compilation-->
